--- a/templates/projects.j2
+++ b/templates/projects.j2
@@ -16,7 +16,7 @@
   <meta property="og:description" content="Hello! I'm Dmitry, or 'Dima' to friends. As a full-stack
       developer, I thrive in the digital realm, driven by curiosity and
       a love for challenges." />
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='/favicon.ico') }}">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/pagedata/projects/projects.css') }}" />
 
 </head>
