--- a/templates/about.j2
+++ b/templates/about.j2
@@ -20,7 +20,7 @@
     for taking on new challenges." />
     <meta property="og:image" content="/og/about.png" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/pagedata/about/about.css') }}" />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='/favicon.ico') }}">
 </head>
 
 <body>
