--- a/templates/index.j2
+++ b/templates/index.j2
@@ -17,7 +17,7 @@
       developer, I thrive in the digital realm, driven by curiosity and
       a love for challenges." />
   <meta property="og:image" content="/og/index.png" />
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='/favicon.ico') }}">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/pagedata/index/style.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/pagedata/index/samsung.css') }}" />
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit"></script>
