--- a/templates/components/navbar.j2
+++ b/templates/components/navbar.j2
@@ -13,11 +13,11 @@
   <a href="/about">
     <p id="about-link">About</p>
   </a>
-  <a href="#" class="icon navbarAction">
+  <a class="icon navbarAction">
     <img src="/navbar/hamburger.png" />
   </a>
 </div>
 <div class="corner">
-  <a href="#" class="navbarAction"> <img src="/navbar/close.png" /> </a>
+  <a class="navbarAction"> <img src="/navbar/close.png" /> </a>
 </div>
 <script src="{{ url_for('static', filename='/navbar/navbar.js') }}"></script>
