--- a/templates/components/nextpost.j2
+++ b/templates/components/nextpost.j2
@@ -2,6 +2,6 @@
     hx-post="/projects/{{post.link}}" hx-trigger="revealed" hx-swap="afterend">
     <div>
         <p>Next Project: {{ post.title }}</p>
-        <p class="htmx-indicator">Loading...</p>
+        {# <p class="htmx-indicator">Loading...</p> #}
     </div><img {% if post.Text_Color=="#000000" %} style="filter: invert(1)" {% endif %} src="/arrows/down.png" />
 </div>
