--- a/templates/index.j2
+++ b/templates/index.j2
@@ -65,7 +65,7 @@
             {% endif %}
           </div>
           <div class="content-bottom">
-            <img src="/imgproxy/{{preview.Title_Image['id']}}.png" alt="Car Expense Calculator Project" />
+            <img src="/imgproxy/{{preview.Title_Image['id']}}/thumbnails" alt="{{preview.title}} Project" />
           </div>
         </a>
       </div>
