--- a/templates/components/post.j2
+++ b/templates/components/post.j2
@@ -3,7 +3,7 @@
     <div class="post" style="color: {{post.post.Text_Color}} ">
         <div class="left-post">
             <h1>{{post.post.title}}</h1>
-            <img src="/imgproxy/{{post.post.Title_Image['id']}}.png" />
+            <img src="/imgproxy/{{post.post.Title_Image['id']}}/thumbnails" />
         </div>
         <div class="right-post-body">
             <div>{{post.parse_body()}}</div>
