--- a/templates/components/nextpost.j2
+++ b/templates/components/nextpost.j2
@@ -1,7 +1,8 @@
 <div class="next-post next-trigger" style="background-color: {{post.background_color}}; color: {{post.Text_Color}};"
-    hx-post="/projects/{{post.link}}" hx-trigger="revealed" hx-swap="afterend">
+    hx-post="{{url_for('singleproject', link=post.link)}}" hx-trigger="revealed" hx-swap="afterend">
     <div>
         <p>Next Project: {{ post.title }}</p>
         {# <p class="htmx-indicator">Loading...</p> #}
-    </div><img {% if post.Text_Color=="#000000" %} style="filter: invert(1)" {% endif %} src="/arrows/down.png" />
+    </div><img {% if post.Text_Color=="#000000" %} style="filter: invert(1)" {% endif %}
+        src="{{ url_for('static', filename='/arrows/down.png') }}" />
 </div>
