--- a/templates/projects.j2
+++ b/templates/projects.j2
@@ -11,12 +11,15 @@
       a love for challenges." />
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://dmitrypol.com/" />
+  <meta property="og:url" content="{{url_for(request.endpoint,
+    _external=True, **request.view_args)}}" />
   <meta property="og:title" content="Dima | Projects" />
   <meta property="og:description" content="Hello! I'm Dmitry, or 'Dima' to friends. As a full-stack
       developer, I thrive in the digital realm, driven by curiosity and
       a love for challenges." />
-  <link rel="shortcut icon" href="{{ url_for('static', filename='/favicon.ico') }}">
+  <meta property="og:image" content="{{ url_for('take_screenshot', width=1200, height=630, url=url_for(request.endpoint,
+    _external=True, **request.view_args)) }}" />
+  <link rel=" shortcut icon" href="{{ url_for('static', filename='/favicon.ico') }}">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/pagedata/projects/projects.css') }}" />
 
 </head>
