--- a/templates/projects.j2
+++ b/templates/projects.j2
@@ -18,7 +18,7 @@
       developer, I thrive in the digital realm, driven by curiosity and
       a love for challenges." />
   <meta property="og:image" content="{{ url_for('take_screenshot', width=1200, height=630, url=url_for(request.endpoint,
-    _external=True, **request.view_args)) }}" />
+    _external=False, **request.view_args)) }}" />
   <link rel=" shortcut icon" href="{{ url_for('static', filename='/favicon.ico') }}">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/pagedata/projects/projects.css') }}" />
 
