--- a/templates/projects.j2
+++ b/templates/projects.j2
@@ -6,17 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dima | Projects</title>
   <meta name="title" content="Dima | Projects" />
-  <meta name="description" content="Hello! I'm Dmitry, or 'Dima' to friends. As a full-stack
-      developer, I thrive in the digital realm, driven by curiosity and
-      a love for challenges." />
+  <meta name="description" content="{{info['index_short_text']}}" />
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{url_for(request.endpoint,
     _external=True, **request.view_args)}}" />
   <meta property="og:title" content="Dima | Projects" />
-  <meta property="og:description" content="Hello! I'm Dmitry, or 'Dima' to friends. As a full-stack
-      developer, I thrive in the digital realm, driven by curiosity and
-      a love for challenges." />
+  <meta property="og:description" content="{{info['index_short_text']}}" />
   <meta property="og:image" content="{{ url_for('take_screenshot', width=1200, height=630, url=url_for(request.endpoint,
     _external=False, **request.view_args)) }}" />
   <link rel=" shortcut icon" href="{{ url_for('static', filename='/favicon.ico') }}">
