--- a/templates/about.j2
+++ b/templates/about.j2
@@ -36,9 +36,9 @@
                     <br />
                     <div class="social-icons">
                         <a href="https://wa.me/972528706038">
-                            <img src="{{ url_for('static', filename='/icons/whatsapp.png') }}" /></a><a
+                            <img src="{{ url_for('static', filename='/icons/whatsapp.webp') }}" /></a><a
                             href="mailto:dima@dmitrypol.com"><img
-                                src="{{ url_for('static', filename='/icons/mail.png') }}" /></a>
+                                src="{{ url_for('static', filename='/icons/mail.webp') }}" /></a>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                 {{info["About_text"]}}
                 <div class="carousel">
                     <button class="carousel-arrow left-arrow">
-                        <img src="{{ url_for('static', filename='/arrows/left.png') }}" />
+                        <img src="{{ url_for('static', filename='/arrows/left.webp') }}" />
                     </button>
                     <div class="carousel-track">
                         {% for preview in previews %}
@@ -61,7 +61,7 @@
                         {% endfor %}
                     </div>
                     <button class="carousel-arrow right-arrow">
-                        <img src="{{ url_for('static', filename='/arrows/right.png') }}" />
+                        <img src="{{ url_for('static', filename='/arrows/right.webp') }}" />
                     </button>
                 </div>
             </div>
