--- a/templates/components/navbar.j2
+++ b/templates/components/navbar.j2
@@ -15,10 +15,10 @@
     <p id="about-link">About</p>
   </a>
   <a class="icon navbarAction">
-    <img src="/navbar/hamburger.png" />
+    <img src="/navbar/hamburger.webp" />
   </a>
 </div>
 <div class="corner">
-  <a class="navbarAction"> <img src="/navbar/close.png" /> </a>
+  <a class="navbarAction"> <img src="/navbar/close.webp" /> </a>
 </div>
 <script src="{{ url_for('static', filename='/navbar/navbar.js') }}"></script>
