--- a/templates/components/nextpost.j2
+++ b/templates/components/nextpost.j2
@@ -4,5 +4,5 @@
         <p>Next Project: {{ post.title }}</p>
         {# <p class="htmx-indicator">Loading...</p> #}
     </div><img {% if post.Text_Color=="#000000" %} style="filter: invert(1)" {% endif %}
-        src="{{ url_for('static', filename='/arrows/down.png') }}" />
+        src="{{ url_for('static', filename='/arrows/down.webp') }}" />
 </div>
