--- a/templates/components/navbar.j2
+++ b/templates/components/navbar.j2
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='/navbar/navbar.css') }}" />
-<div class="left">
+<div class="left" data-aos="fade-left">
   <a id="devIcon" href="{{url_for('index')}}">&lt;/&gt;</a>
   <a id="name-navbar" href="{{url_for('index')}}">Dima</a>
 
 </div>
-<div class="right">
+<div class="right" data-aos="fade-right">
   <a href="{{url_for('projects')}}">
     <p id="projects-link">Projects</p>
   </a>
