--- a/templates/components/post.j2
+++ b/templates/components/post.j2
@@ -1,7 +1,7 @@
 <div hx-trigger="intersect" class="post-container" style="background-color: {{post.post.background_color}}"
     id="{{post.post.link}}">
     <div class="post" style="color: {{post.post.Text_Color}} ">
-        <div class="left-post">
+        <div class="left-post" data-aos="fade-right">
             <h1>{{post.post.title}}</h1>
             <img src="{{url_for('proxy_image', url=post.post.Title_Image['id'], key='thumbnails')}}" />
         </div>
